--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,38 @@
 @import "tailwindcss";
 
+@layer utilities {
+  .scrollbar-custom {
+    scrollbar-width: thin;
+    scrollbar-color: #c2255c #e0e7ff;
+  }
+
+  .scrollbar-custom::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+  }
+
+  /* Estiliza o TRACK (trilha/fundo da barra) */
+  .scrollbar-custom::-webkit-scrollbar-track {
+    background: #e0e7ff;
+    border-radius: 10px;
+  }
+
+  /* Estiliza o THUMB (a alça que você arrasta) */
+  .scrollbar-custom::-webkit-scrollbar-thumb {
+    background-color: #4f46e5;
+    border-radius: 10px;
+    border: 2px solid #e0e7ff;
+  }
+
+  /* Estilo ao passar o mouse sobre o THUMB */
+  .scrollbar-custom::-webkit-scrollbar-thumb:hover {
+    background-color: #3730a3;
+  }
+}
+
+.truncate-single-line {
+  white-space: nowrap; /* Não quebra de linha */
+  overflow: hidden; /* Esconde o que exceder */
+  text-overflow: ellipsis; /* Adiciona as reticências */
+  max-width: 300px;
+}
